--- a/overrides/base.html
+++ b/overrides/base.html
@@ -69,8 +69,8 @@
     </head>
 
     <body{% if page and page.is_homepage %} class="homepage"{% endif %}>
-        <a class="sr-only" href="#main-content">Skip to main content</a>
-        <div class="navbar fixed-top navbar-expand-lg navbar-{% if config.theme.nav_style == "light" %}light{% else %}dark{% endif %} bg-{{ config.theme.nav_style }}">
+        <a class="skip-link" href="#main-content">Skip to main content</a>
+        <nav class="navbar fixed-top navbar-expand-lg navbar-{% if config.theme.nav_style == "light" %}light{% else %}dark{% endif %} bg-{{ config.theme.nav_style }}" aria-label="Primary">
             <div class="container">
 
                 {%- block site_name %}
@@ -80,7 +80,7 @@
                 {%- if nav|length>1 or (page and (page.next_page or page.previous_page)) or config.repo_url %}
                 <!-- Expander button -->
                 <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon" aria-hidden="true"></span>
                 </button>
                 {%- endif %}
 
@@ -93,7 +93,15 @@
                         {%- for nav_item in nav %}
                         {%- if nav_item.children %}
                             <li class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle{% if nav_item.active %} active" aria-current="page{% endif %}" role="button" data-bs-toggle="dropdown"  aria-expanded="false">{{ nav_item.title }}</a>
+                                <a
+                                  href="#"
+                                  class="nav-link dropdown-toggle{% if nav_item.active %} active{% endif %}"
+                                  role="button"
+                                  data-bs-toggle="dropdown"
+                                  aria-haspopup="true"
+                                  aria-expanded="false"
+                                  {% if nav_item.active %}aria-current="page"{% endif %}
+                                >{{ nav_item.title }}</a>
                                 <ul class="dropdown-menu">
                                 {%- for nav_item in nav_item.children %}
                                     {% include "nav-sub.html" %}
@@ -115,7 +123,7 @@
                         {%- if 'search' in config.plugins %}
                         <li class="nav-item">
                             <a href="#" class="nav-link" data-bs-toggle="modal" data-bs-target="#mkdocs_search_modal">
-                                <i class="fa fa-search"></i> {% trans %}Search{% endtrans %}
+                                <i class="fa fa-search" aria-hidden="true"></i> {% trans %}Search{% endtrans %}
                             </a>
                         </li>
                         {%- endif %}
@@ -125,12 +133,12 @@
                         {%- if page and (page.next_page or page.previous_page) %}
                             <li class="nav-item">
                                 <a rel="prev" {% if page.previous_page %}href="{{ page.previous_page.url|url }}" class="nav-link"{% else %}class="nav-link disabled"{% endif %}>
-                                    <i class="fa fa-arrow-left"></i> {% trans %}Previous{% endtrans %}
+                                    <i class="fa fa-arrow-left" aria-hidden="true"></i> {% trans %}Previous{% endtrans %}
                                 </a>
                             </li>
                             <li class="nav-item">
                                 <a rel="next" {% if page.next_page %}href="{{ page.next_page.url|url }}" class="nav-link"{% else %}class="nav-link disabled"{% endif %}>
-                                    {% trans %}Next{% endtrans %} <i class="fa fa-arrow-right"></i>
+                                    {% trans %}Next{% endtrans %} <i class="fa fa-arrow-right" aria-hidden="true"></i>
                                 </a>
                             </li>
                         {%- endif %}
@@ -141,11 +149,11 @@
                             <li class="nav-item">
                                 <a href="{{ page.edit_url }}" class="nav-link">
                                     {%- if config.repo_name == 'GitHub' -%}
-                                        <i class="fa-brands fa-github"></i> {% trans repo_name=config.repo_name %}Edit on {{ repo_name }}{% endtrans %}
+                                        <i class="fa-brands fa-github" aria-hidden="true"></i> {% trans repo_name=config.repo_name %}Edit on {{ repo_name }}{% endtrans %}
                                     {%- elif config.repo_name == 'Bitbucket' -%}
-                                        <i class="fa-brands fa-bitbucket"></i> {% trans repo_name=config.repo_name %}Edit on {{ repo_name }}{% endtrans %}
+                                        <i class="fa-brands fa-bitbucket" aria-hidden="true"></i> {% trans repo_name=config.repo_name %}Edit on {{ repo_name }}{% endtrans %}
                                     {%- elif config.repo_name == 'GitLab' -%}
-                                        <i class="fa-brands fa-gitlab"></i> {% trans repo_name=config.repo_name %}Edit on {{ repo_name }}{% endtrans %}
+                                        <i class="fa-brands fa-gitlab" aria-hidden="true"></i> {% trans repo_name=config.repo_name %}Edit on {{ repo_name }}{% endtrans %}
                                     {%- elif config.repo_name -%}
                                         {% trans repo_name=config.repo_name%}Edit on {{ repo_name }}{% endtrans %}
                                     {% else %}
@@ -157,11 +165,11 @@
                             <li class="nav-item">
                                 <a href="{{ config.repo_url }}" class="nav-link">
                                     {%- if config.repo_name == 'GitHub' -%}
-                                        <i class="fa-brands fa-github"></i> {{ config.repo_name }}
+                                        <i class="fa-brands fa-github" aria-hidden="true"></i> {{ config.repo_name }}
                                     {%- elif config.repo_name == 'Bitbucket' -%}
-                                        <i class="fa-brands fa-bitbucket"></i> {{ config.repo_name }}
+                                        <i class="fa-brands fa-bitbucket" aria-hidden="true"></i> {{ config.repo_name }}
                                     {%- elif config.repo_name == 'GitLab' -%}
-                                        <i class="fa-brands fa-gitlab"></i> {{ config.repo_name }}
+                                        <i class="fa-brands fa-gitlab" aria-hidden="true"></i> {{ config.repo_name }}
                                     {%- else -%}
                                     {{ config.repo_name }}
                                     {%- endif -%}
@@ -172,29 +180,29 @@
                       {%- if config.theme.user_color_mode_toggle %}
                             <li class="nav-item dropdown">
                               <button id="theme-menu" aria-expanded="false" data-bs-toggle="dropdown" data-bs-display="static" aria-label="Toggle theme" class="nav-link dropdown-toggle">
-                                <i class="fa-solid fa-circle-half-stroke fa-fw"></i>
+                                <i class="fa-solid fa-circle-half-stroke fa-fw" aria-hidden="true"></i>
                                 <span class="d-lg-none ms-2">Toggle theme</span>
                               </button>
                               <ul class="dropdown-menu dropdown-menu-end">
                                 <li>
                                   <button class="dropdown-item d-flex align-items-center" data-bs-theme-value="light" aria-pressed="{% if config.theme.color_mode == 'light' %}true{% else %}false{% endif %}">
-                                    <i class="fa-solid fa-sun fa-fw"></i>
+                                    <i class="fa-solid fa-sun fa-fw" aria-hidden="true"></i>
                                     <span class="ms-2">Light</span>
-                                    <i class="fa-solid fa-check ms-auto{% if config.theme.color_mode != 'light' %} d-none{% endif %}"></i>
+                                    <i class="fa-solid fa-check ms-auto{% if config.theme.color_mode != 'light' %} d-none{% endif %}" aria-hidden="true"></i>
                                   </button>
                                 </li>
                                 <li>
                                   <button class="dropdown-item d-flex align-items-center" data-bs-theme-value="dark" aria-pressed="{% if config.theme.color_mode == 'dark' %}true{% else %}false{% endif %}">
-                                    <i class="fa-solid fa-moon fa-fw"></i>
+                                    <i class="fa-solid fa-moon fa-fw" aria-hidden="true"></i>
                                     <span class="ms-2">Dark</span>
-                                    <i class="fa-solid fa-check ms-auto{% if config.theme.color_mode != 'dark' %} d-none{% endif %}"></i>
+                                    <i class="fa-solid fa-check ms-auto{% if config.theme.color_mode != 'dark' %} d-none{% endif %}" aria-hidden="true"></i>
                                   </button>
                                 </li>
                                 <li>
                                   <button class="dropdown-item d-flex align-items-center" data-bs-theme-value="auto" aria-pressed="{% if config.theme.color_mode == 'auto' %}true{% else %}false{% endif %}">
-                                    <i class="fa-solid fa-circle-half-stroke fa-fw"></i>
+                                    <i class="fa-solid fa-circle-half-stroke fa-fw" aria-hidden="true"></i>
                                     <span class="ms-2">Auto</span>
-                                    <i class="fa-solid fa-check ms-auto{% if config.theme.color_mode != 'auto' %} d-none{% endif %}"></i>
+                                    <i class="fa-solid fa-check ms-auto{% if config.theme.color_mode != 'auto' %} d-none{% endif %}" aria-hidden="true"></i>
                                   </button>
                                 </li>
                               </ul>
@@ -203,7 +211,7 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </nav>
         {%- if config.theme.color_mode != "light" or config.theme.user_color_mode_toggle %}
         <script src="{{ 'js/darkmode.js'|url }}"></script>
         {%- endif %}
@@ -212,14 +220,14 @@
             <div class="row">
                 {%- block content %}
                     <nav class="col-md-3" aria-label="Page outline">{% include "toc.html" %}</nav>
-                    <main id="main-content" class="col-md-9" role="main">{% include "content.html" %}</main>
+                    <main id="main-content" class="col-md-9" role="main" tabindex="-1">{% include "content.html" %}</main>
                 {%- endblock %}
             </div>
         </div>
 
         <footer class="col-md-12">
           {%- block footer %}
-            <hr>
+            <hr aria-hidden="true" role="presentation">
             {%- if config.copyright %}
                 <p>{{ config.copyright }}</p>
             {%- endif %}
