--- a/overrides/base.html
+++ b/overrides/base.html
@@ -231,7 +231,7 @@
             {%- if config.copyright %}
                 <p>{{ config.copyright }}</p>
             {%- endif %}
-            <p>{% trans mkdocs_link='<a href="https://www.mkdocs.org/">MkDocs</a>' %}Documentation built with {{ mkdocs_link }}.{% endtrans %}</p>
+            <p>UnisonOS Copyright 2025</p>
           {%- endblock %}
         </footer>
 
